# Easy-Management-Organization

./: README.md  bash.bat  bash.sh
backend/: CMakeLists.txt  Employee.h  main.cpp
frontend/: app.js  index.html  style.css
